---------

## NEXT_RELEASE (major release)

- BatIO: make the ?cleanup parameter of BatIO.input_channel true by default:
  closing the returned input will close the underlying input channel
  #109, #489
  (Simon Cruanes, report by Michael Ekstrand)
- BatArray: add split : 'a BatOrd.ord -> 'a array -> 'a -> int * int
  search for the range equal to a given element in a sorted array
  #443, #470
  (Simon Cruanes, Gabriel Scherer, request by Francois Berenger)

## NEXT_RELEASE (minor release)

- Clarification and improvements to the documentation
  #682, #685, #693
  (Florian Angeletti, Johannes Kloos, Michael Färber)

- make `LazyList.split_at` lazy:
  `split_at : int -> 'a t -> 'a t * 'a t`
  would previously eagerly force the prefix of the list
  and only be lazy in its second returned value.
  #694
  (Michael Färber, Gabriel Scherer, Thibault Suzanne)

- Add `List.{map2i,iter2i}`
  #696
  (Thibault Suzanne)

- Added `Result.{map,map_both}`
  #705
  (Ifaz Kabir)

## v2.5.3

Batteries 2.5.3 synchronizes library functions with OCaml 4.04+beta2,
and will hopefully be an extension of the upcoming OCaml 4.04 release.

- Compatibility with OCaml 4.04.
  5e63a9a756f
  (Gabriel Scherer)

## v2.5.1, v2.5.2

Batteries 2.5.1 and 2.5.2 fix a silly packaging bug in Batteries 2.5.0.

## v2.5.0

Batteries 2.5.0 is a minor release whose main change is that it is
compatible with the newly released OCaml 4.03.

Note that Batteries 2.5.0 is compatible with older OCaml releases as
well, and provides back-ported versions of most standard library
functions made available in 4.03 only. For example,
BatString.uppercase_ascii is usable under all OCaml versions.

If the documentation of a Batteries function says
  @since 2.5.0
then it is available under all supported OCaml version (3.12.1 and up).
If it says
  @since 2.5.0 and OCaml 4.03.0
then it is only available under OCaml 4.03.0.

- BatTuple: add Tuple{N}.make : 'a1 -> ... -> 'an -> 'a1 * ... * 'an
  #657
  (Thibault Suzanne)